# PanosUI

./: .clang-tidy  .gitignore  .gitmodules  README.md  build-release.sh  build-thirdparty.sh  meson.build
cpp/: PanosUI.hpp
cpp/ui/: Callback.hpp  UIAnimation.hpp  UIApplication.hpp  UIEventResponder.hpp  UIView.hpp  UIWindow.hpp
debug/: priv.h
docs/: Doxyfile.in  conf.py  index.rst
docs/first_app/: index.rst  step1.rst  step2.rst  step3.rst  step4.rst
docs/window/: Array.rst  UIAnimation.rst  UIColor.rst  UIGeometry.rst  UILayer.rst  UIView.rst  c_doxygen_sphinx.rst
examples/: cpp.cpp  layer.c  minimal.c
examples/swift-example/: Package.swift  README.md
examples/swift-example/Sources/PanosUI/: module.modulemap
examples/swift-example/Sources/swift-example/: UIApplication.swift  UIView.swift  swift_example.swift
examples/swift-example/Tests/swift-exampleTests/: swift_exampleTests.swift
include/: Array.h  PanosUI.h  UIAnimation.h  UIApplication.h  UIColor.h  UIEvent.h  UIEventResponder.h  UIGeometry.h  UIGraphicsContext.h  UILabel.h  UILayer.h  UILayerDelegate.h  UIPoint.h  UIRect.h  UISwitch.h  UIView.h  UIViewController.h  UIWindow.h  UIWindowController.h
ipc/: ipc_test  ipc_test.cc
lldb/: module.modulemap
python/: panosui.py  panosui_c.py  python.py
reference/: layer  layer.c  minimal-wayland.c
src/: UIAnimation.c  UIAnimation.h  UIAnimation_timing.c  UIApplication.c  UIApplication.h  UIColor.c  UIColor.h  UIEvent.h  UIEventResponder.c  UIEventResponder.h  UIGeometry.h  UIGraphicsContext.h  UILabel.c  UILabel.h  UILayer.c  UILayer.h  UILayerContext.h  UIPoint.c  UIPoint.h  UIRect.c  UIRect.h  UISwitch.c  UISwitch.h  UIView.c  UIView.h  UIViewController.c  UIViewController.h  UIWindow.c  UIWindow.h  UIWindowController.c  UIWindowController.h  platform.h
src/linux/: UILayer_linux.c  UILayer_linux.h  UIWindow_linux.c  UIWindow_linux.h  egl.c  egl.h  globals.c  globals.h  graphics.cpp  platform.c  platform.h  platformData.h  pointer.c
src/macos/: platform.m
src/shared/: Array.c  Array.h
src/win/: platform.cpp
swift/: README.md  test.swift
swift/Sources/PanosUI/: panosui_bridge.h
swift/Sources/swift-example/: Array.swift  UIColor.swift  UIGeometry.swift  UIResponder.swift  UIView.swift  UIWindow.swift  UIWindowController.swift  swift_example.swift
tests/: meson.build  test_UIApplication.c  test_UILayer.c  test_UIView.c  test_UIViewController.c
